fix: add location info

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div>
         <h1>Stanislav Yegorov</h1>
         <ul>
+          <li>Saint-Petersburg, Russia</li>
           <li>discord: Darraler</li>
           <li>telegram: @no_regerts</li>
         </ul>
@@ -69,9 +70,6 @@
             </li>
           </ul>
         </details>
-
-        
-        
       </section>
 
       <div class="two-columns">
